JG-2008-01-18-0: Enhancem.: Use the logging framework (JG-2008-01-16-0) for all
                            checks in bugs/issuezilla.

CR-2008-01-17-0: Bugfix:    removed usage of ? operator in file_procedures.tcl
                            ? seems not to work on all tcl/expect versions

MD-2008-01-17-0: Enhancem.: added Issue test 2372
                 Review:    JG

CR-2008-01-17-0: Bugfix:    Fixed wrong format in wait_for_remote_dir

JG-2008-01-17-0: Enhancem.: Use the logging framework (JG-2008-01-16-0) for all
                            library code in tcl_files, and for the api tests.

JG-2008-01-16-0: Enhancem.: New logging framework for testsuite.
                 Issue:     9
                 Review:    CR

MP-2008-01-14-0: Enhancem.: Added shell_path and project fields to the qstat -j
                            output comparison test.
                 Review:    JG

CR-2008-01-10-0: Bugfix:    first compile clean on java build host as 
                            workaround for inconsistent ant dependencies
                 Review:    AA

JO-2008-01-10-0: Enhancem.: o added AR queries to arcorun
                            o changed arco_checktree to use java 1.5 for version
                              >= 6.2 and 1.4 for other versions
                            o -cl option for arcorun commandline

LP-2008-01-08-0: Enhancem.: Fixed dbwriter autoinstall
                 Review:    JO

OJ-2008-01-07-0: Enhance:   Simplified testcase for IZ 2411
                            at bugs/issuezilla/2411.
                 Review:    RD, JG

JG-2008-01-07-0: Enhancem.: Instead of moving files to the testsuite_trash 
                            folder, really delete them. Added commandline switch
                            "testsuite_trash" to activate old behavior.
                 Issue:     168
                 Review:    HP

AA-2008-01-07-0: Enhancem.: support for automatic install with SMF change
                 Review:    CR
